// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A custom Divider 1`] = `
.c0 {
  border: none;
  height: 20px;
  width: 100%;
  background-color: turquoise;
}

<hr
  className="c0"
  size="20px"
/>
`;

exports[`Default Divider 1`] = `
.c0 {
  border: none;
  height: 1px;
  width: 100%;
  background-color: #C1C6CC;
}

<hr
  className="c0"
  size="1px"
/>
`;

exports[`Divider with a variant 1`] = `
.c0 {
  border: none;
  height: 1px;
  width: 100%;
  background-color: #707781;
}

<hr
  className="c0"
  size="1px"
/>
`;
